@@ -8,7 +8,7 @@
       </p>
 
       <p>
-      The <b>Save Normals</b> checkbox allows you indicate if you want
+      The <b>Save Normals</b> checkbox allows you to indicate if you want
       the normals saved in the file or not.
       </p>
 
