@@ -19,7 +19,7 @@
       <item>
         <widget class="QCheckBox" name="m_normalsValue" >
           <property name="text" >
-            <string>&amp;Save normals</string>
+            <string>&amp;Save Normals</string>
           </property>
           <property name="shortcut" >
             <string>Alt+S</string>
@@ -135,6 +135,16 @@
           <property name="margin" >
             <number>0</number>
           </property>
+          <item>
+           <widget class="QLabel" name="textLabel1" >
+            <property name="text" >
+             <string>Press F1 for help</string>
+            </property>
+            <property name="wordWrap" >
+             <bool>false</bool>
+            </property>
+           </widget>
+          </item>
           <item>
             <spacer name="spacer1" >
               <property name="sizeHint" >
